force-app/main/default/objects/SurveyPhotoViewerSetting__c/SurveyPhotoViewerSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Survey Photo Viewer</label>
</CustomObject>