force-app/main/default/objects/SurveyPhotoViewerSetting__c/fields/AIImageURL__c.field-meta.xml
<CustomField>
    <fullName>AIImageURL__c</fullName>
    <label>AIImageURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>