force-app/main/default/objects/SurveyPhotoViewerSetting__c/fields/CloudinaryImageURL__c.field-meta.xml
<CustomField>
    <fullName>CloudinaryImageURL__c</fullName>
    <label>CloudinaryImageURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>