force-app/main/default/objects/SurveyPhotoViewerSetting__c/fields/CloudinaryKey__c.field-meta.xml
<CustomField>
    <fullName>CloudinaryKey__c</fullName>
    <label>Cloudinary Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>