force-app/main/default/objects/SurveyPhotoViewerSetting__c/fields/CloudinaryThumbnailURL__c.field-meta.xml
<CustomField>
    <fullName>CloudinaryThumbnailURL__c</fullName>
    <label>CloudinaryThumbnailURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>