force-app/main/default/objects/SurveyPhotoViewerSetting__c/fields/Iv__c.field-meta.xml
<CustomField>
    <fullName>Iv__c</fullName>
    <label>Iv</label>
    <length>50</length>
    <type>Text</type>
</CustomField>